flux/apps/browsertrix/app/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: browsertrix
  namespace: browsertrix
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - browsertrix.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
      backendRefs:
        - name: browsertrix-cloud-backend
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: browsertrix-cloud-frontend
          port: 80
